--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ __pycache__/
 # https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
 # https://github.com/github/gitignore/blob/master/Python.gitignore
 .vscode/launch.json
+views/layout.jade
+views/error.jade
+views/index.jade
+routes/users.js
+routes/index.js
+bin/www
+package.json
+app.js
